sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:26: error: ';' expected but identifier found.
}while (parc1==true) or (parc2==true)
                     ^